--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="df.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>savan web rohit madarchod</title>
+    <title>savan web rohit </title>
 </head>
 <body>
     <div id="main">
@@ -77,8 +77,39 @@
                 <img src="https://vayuz-tixd.vercel.app/assets/right_image-BlZS0xHp.png" alt="rohitmadrchod">
             </div>
            </div>
-           <div id="connectmain"></div>
-           <div id="footermainapp"></div>
+           <div id="connectmain" style="color: #fff;">  
+            <div id="menuitem">
+                <div id="menuuotag">
+                    <ul><li>Events</li><li>Gen AI</li><li>Careers</li><li>Case study</li><li>SME Talks</li></ul>
+                </div>
+                <div id="connectuspara">
+                    <p id="connet_us_para">For any collaborative projects or enquiries feel free to connect with us.</p>
+                    <p>vayuz.com</p>
+                </div>
+            </div>
+            <div id="formain">
+                <div id="formandiv">
+                    <h3>connect <br> with us</h3>
+                    <form>
+                        <div id="formdetils">
+                            <input required="" placeholder="Full Name" type="text" value="" name="name">
+                            <input required="" placeholder="Email" type="email" value="" name="email">
+                            <input required="" placeholder="Phone Number" pattern="[0-9]*" inputmode="numeric" type="tel" value="" name="phone">
+                        </div>
+                        <div id="divsubmit">
+                            <button type="submit">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+           </div>
+           <div id="footermainapp" style="color: #fff;">
+            <div id="fotmaindiv">
+                <ul>
+                    <li><ul><li> <a href="#" data-discover="true">About</a></li><li> <a href="#" data-discover="true">Insights</a></li><li> <a href="#" data-discover="true">Community</a></li><li> <a href="#" data-discover="true">Privacy &amp; Policies</a></li></ul></li>
+                </ul>
+            </div>
+           </div>
         </div> <!-- content div section  end -->
       </div>
     </div>
