--- a/index.html
+++ b/index.html
@@ -68,14 +68,21 @@
                 <p>Step into innovation! Explore our range of services and let's create something extraordinary together. <br> Your vision, our expertise. Let's begin!</p>
             </div>
            </div>
-           <div id="mainaccordsec">
+           <div id="mainaccordsec" >
             <div id="textacsec">
-                <button id="accordion">Click me <span i="plusminus">+</span></button>
+                <button id="accordion"> Flutter app Development <span i="plusminus" id="flutter">+</span></button>
+                <div id="panel"><p>This is the hidden content. It will appear when you click the + sign and disappear when you click -.</p></div>
+                <button id="accordion">UI/UX Design<span i="plusminus" id="uiux">+</span></button>
+                <div id="panel"><p>This is the hidden content. It will appear when you click the + sign and disappear when you click -.</p></div>
+                <button id="accordion"> Rohit Madarchod <span i="plusminus" id="rohitmadrchod">+</span></button>
+                <div id="panel"><p>This is the hidden content. It will appear when you click the + sign and disappear when you click -.</p></div>
+                <button id="accordion"> Amit bhosdike <span i="plusminus" id="amitbhosdikegay">+</span></button>
                 <div id="panel"><p>This is the hidden content. It will appear when you click the + sign and disappear when you click -.</p></div>
             </div>
             <div id="imgtextacc">
-                <img src="https://vayuz-tixd.vercel.app/assets/right_image-BlZS0xHp.png" alt="rohitmadrchod">
-            </div>
+                <!-- <img src="https://vayuz-tixd.vercel.app/assets/right_image-BlZS0xHp.png" alt="rohitmadrchod"> -->
+                <div id="yourimage"></div>
+            </div>x
            </div>
            <div id="connectmain" style="color: #fff;">  
             <div id="menuitem">
@@ -92,7 +99,7 @@
                     <h3>connect <br> with us</h3>
                     <form>
                         <div id="formdetils">
-                            <input required="" placeholder="Full Name" type="text" value="" name="name">
+                            <input required="savan" placeholder="Full Name" type="text" value="" name="name">
                             <input required="" placeholder="Email" type="email" value="" name="email">
                             <input required="" placeholder="Phone Number" pattern="[0-9]*" inputmode="numeric" type="tel" value="" name="phone">
                         </div>
