--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            </div>
            <div id="fluttermain">
             <div id="fludowndiv"><h3>Flutter's Dawn</h3><p>History of flutter</p></div>
-            <div id="fludownpara"><p>Uncover the fascinating story of Flutter in 'Flutter's Dawn: History of Flutter.' From humble origins to global acclaim, delve into its captivating narrative. Explore milestones, triumphs, and challenges. Whether tech enthusiast or curious mind, join us on this captivating journey! <a href="/" data-discover="true">Click to begin!</a> </p></div>
+            <div id="fludownpara"><p>Uncover the fascinating story of Flutter in 'Flutter's Dawn: History of Flutter.' From humble origins to global acclaim, delve into its captivating narrative. Explore milestones, triumphs, and challenges. Whether tech enthusiast or curious mind, join us on this captivating journey! <a href="#" data-discover="true">Click to begin!</a> </p></div>
             <div id="fludownbtn"><a href="#">Begin</a></div>
            </div>
            <div id="dynamicservice" style="color: #fff;">
